2007-03-31  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* doc/skk.texi: Update for required APEL version.

	* skk.el: Add comments for APEL and `make-temp-file'.
	(widget-field-activate): Advise with`skk-wrap-newline-command'.

2007-03-30  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* SKK-CFG: Update.

2007-03-29  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-annotation.el (skk-annotation-show-1):
	(skk-annotation-show-2):

	Inhibit `skk-annotation-wait-for-input' when
	`skk-annotation-display-p' fails for minibuf or skk-isearch-switch
	is on.

	* skk-e21.el (skk-tooltip-show-at-point): Disable the Elscreen
	workaround in minibuffer.

	* skk-vars.el (skk-jisx0201-mode-string): Modify the default
	value.

2007-03-28  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-version.el (skk-version): Bump to 13.0.91.

	* SKK-MK: Fix installation paths for Carbon Emacs.

	* skk-annotation.el: Load skk-macs.el and skk-vars.el within
	'eval-and-compile'.

2007-03-28  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-annotation.el (skk-annotation-generate-url):
	(skk-annotation-url-package-available-p):
	(skk-annotation-find-and-show):

	New functions.

	* skk-vars.el (skk-annotation-url-package-available-p): New
	variable.

	* skk.el (skk-henkan):
	(skk-henkan-in-minibuff):
	(skk-previous-candidate):

	Call `skk-annotation-find-and-show'.

2007-03-27  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* etc/NICOLA-SKK.tut:
	* etc/SKK.tut:
	* etc/SKK.tut.E:

	Use `skktut-user-name' instead of `user-full-name'.

	* SKK-CFG: Update comments and examples.

	* SKK-MK: Set APEL_DIR and EMU_DIR instead of
	APEL_SPECIFIC_LISPDIR and EMU_PREFIX.  No longer support
	customization with enviromental variables.

	* skk-tut.el (skktut-user-name): New function.

	* tinyinstall.el: No longer in repository.

2007-03-25  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* SKK-MK: Remove functions for detecting APEL installation paths.
	(SKK-MK-generate-autoloads-el-package): Under XEmacs 21.5, call